# pluma

./: CMakeLists.txt  readme  test
example/: Device.hpp  Main.cpp
example/plugins/: Keyboard.hpp  Mouse.hpp  StandardDevices.cpp
example/src/host/: Main.cpp  SimpleWarrior.hpp
example/src/interface/: Warrior.cpp  Warrior.hpp
example/src/plugin/: Connector.cpp  Eagle.hpp  Jaguar.hpp
include/Pluma/: Config.hpp  Connector.hpp  Host.hpp  HostAPI.hpp  PluginAPI.hpp  PluginManager.hpp  Pluma.hpp  Pluma.inl  Provider.hpp
src/Pluma/: DLibrary.cpp  DLibrary.hpp  Dir.cpp  Dir.hpp  Host.cpp  PluginManager.cpp  Provider.cpp
